--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     ]
   },
   "devDependencies": {
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   }
 }
